--- a/src/app/Components/Product/produt-details/produt-details.component.html
+++ b/src/app/Components/Product/produt-details/produt-details.component.html
@@ -23,7 +23,7 @@
         <p>Produit avoir aucun Fournisseur
         </p>
     </div>
-    <table *ngIf="SupplierList.length!==0 " class="table ">
+    <table *ngIf="SupplierList.length!==0 " class="table table-responsive-sm">
         <thead>
             <tr>
                 <th scope="col ">#Id</th>
