--- a/src/app/Components/Supplier/edit-Supplier/edit-supplier.component.css
+++ b/src/app/Components/Supplier/edit-Supplier/edit-supplier.component.css
@@ -1,6 +1,6 @@
 .get-in-touch {
     max-width: 800px;
-    margin: 50px auto;
+    margin: 10px auto;
     position: relative;
 }
 
@@ -19,7 +19,7 @@
 
 .contact-form .form-field {
     position: relative;
-    margin: 20px 0;
+    margin: 15px 0;
 }
 
 .contact-form .input-text {
@@ -39,8 +39,8 @@
 
 .contact-form .input-text:focus+.label,
 .contact-form .input-text.not-empty+.label {
-    -webkit-transform: translateY(-24px);
-    transform: translateY(-24px);
+    -webkit-transform: translateY(-15px);
+    transform: translateY(-15px);
 }
 
 .contact-form .label {
@@ -66,7 +66,6 @@
     font-size: 16px;
     padding: 8px 16px;
     border: none;
-    width: 200px;
     cursor: pointer;
 }
 
@@ -78,7 +77,7 @@
     margin-left: 1rem;
 }
 
-.add-continer {
+.add-container {
     width: 60%;
     margin: auto;
 }
