--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -49,19 +49,49 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="mt-2 ml-3 row">
-        <div style="width: 45%;">
-            <div style="display: block">
-                <canvas baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="barChartOptions" [legend]="'true'" [chartType]="'line'">
+        <!-- <div class="mt-2 ml-3 row">
+            <div style="width: 45%;">
+                <div style="display: block">
+                    <canvas baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="barChartOptions" [legend]="'true'" [chartType]="'line'">
   </canvas>
+                </div>
             </div>
-        </div>
-        <div style="width: 45%;" class="ml-5">
-            <div style="display: block">
-                <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [legend]="'true'" [chartType]="'bar'">
+            <div style="width: 45%;" class="ml-5">
+                <div style="display: block">
+                    <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [legend]="'true'" [chartType]="'bar'">
             </canvas>
+                </div>
+            </div>
+        </div> -->
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card card-chart">
+                <div class="card-header">
+                    <canvas baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="barChartOptions" [legend]="'true'" [chartType]="'line'">
+                    </canvas>
+                </div>
+                <div class="card-footer">
+                    <div class="stats">
+                        <i class="material-icons">access_time</i> Les Produits Le Plus Achetee
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="col-md-6">
+            <div class="card card-chart">
+                <div class="card-header">
+                    <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [legend]="'true'" [chartType]="'bar'">
+                    </canvas>
+                </div>
+
+                <div class="card-footer">
+                    <div class="stats">
+                        <i class="material-icons">access_time</i> Revenue Dans Le Derniere Semaine
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
