--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -1,9 +1,13 @@
-<div class="wrapper" style="background-color: white;">
-    <div class="sidebar" data-color="purple" data-background-color="white">
-        <div class="logo"><a class="simple-text logo-normal" routerLink="dashboard">
-            Stock Management
-        </a></div>
-        <div class="sidebar-wrapper">
+<div class="wrapper ">
+    <div class="sidebar" style="background-color: white;" data-color="purple" data-background-color="white">
+        <div class="logo" style="background-color: white;">
+            <a class="simple-text logo-normal" routerLink="dashboard">
+                <i style="display: block; font-size: 3rem;" class="material-icons">
+                inventory
+                </i> Gestion de Stocke
+            </a>
+        </div>
+        <div class="sidebar-wrapper" style="background-color: white;">
             <ul class="nav">
                 <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link" routerLink="dashboard">
@@ -53,19 +57,23 @@
                 </li>
 
             </ul>
+            <div class="logout justify-content-end">
+                <a style="cursor: pointer; color:rgb(173, 5, 173) ;" (click)="logout()">Log Out
+                    <span class="material-icons">
+                        logout
+                    </span></a>
+            </div>
         </div>
+
     </div>
     <div class="main-panel">
-        <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
             <div class="container-fluid">
                 <div class="navbar-wrapper">
                     <a class="navbar-brand">{{currentEmployee.name}}</a>
                 </div>
-                <div class="justify-content-end">
-                    <a style="cursor: pointer; color:rgb(173, 5, 173) ;" (click)="logout()">Log out</a>
-                </div>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+
+                <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="true" aria-label="Toggle navigation">
             <span class="sr-only">Toggle navigation</span>
             <span class="navbar-toggler-icon icon-bar"></span>
             <span class="navbar-toggler-icon icon-bar"></span>
@@ -73,7 +81,6 @@
           </button>
             </div>
         </nav>
-        <!-- End Navbar -->
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
