--- a/src/app/Components/Supplier/list-Supplier/list-supplier/list-supplier.component.html
+++ b/src/app/Components/Supplier/list-Supplier/list-supplier/list-supplier.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="row mb-1">
             <div class="col-lg-10 mb-1">
-                <input type="text" placeholder="Filtre Par Nom" [(ngModel)]="filter" #filterValue class="form-control w-50">
+                <input type="text" placeholder="Chercher..." [(ngModel)]="filter" #filterValue class="form-control w-50">
             </div>
             <div class="col-lg-1 pr-0">
                 <button class="btn btn-primary text-capitalize" [routerLink]="['add']">  <span class="mr-1"><i class="fa fa-plus-circle"></i></span>fournisseur</button>
@@ -36,20 +36,20 @@
                     <tr *ngFor="let supplier of (listSupplier | filter : 'firstname': filter) | paginate: { itemsPerPage: 8, 
             currentPage: p,totalItems: listSupplier?.length }">
                         <td>
-                            {{supplier.firstname | uppercase }}{{ " " + supplier.lastname }}
+                            {{supplier?.firstname | uppercase }}{{ " " + supplier?.lastname }}
                         </td>
                         <td>
-                            {{supplier.email}}
+                            {{supplier?.email}}
                         </td>
                         <td>
-                            {{supplier.address |ellipsis:15}}
+                            {{supplier?.address |ellipsis:15}}
                         </td>
                         <td>
-                            {{supplier.phone}}
+                            {{supplier?.phone}}
                         </td>
 
                         <td>
-                            <i [routerLink]="['supplier-details',supplier.id]" class="fa fa-ellipsis-h fa-lg" aria-hidden="true" style="cursor: pointer;" aria-hidden="true "></i>
+                            <i [routerLink]="['supplier-details',supplier?.id]" class="fa fa-ellipsis-h fa-lg" aria-hidden="true" style="cursor: pointer;" aria-hidden="true "></i>
                         </td>
                         <td>
                             <i (click)="Delete(supplier.id)" class=" fa fa-trash fa-lg  text-danger" aria-hidden="true" style="cursor: pointer;" aria-hidden="true "></i>
