--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -49,20 +49,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="mt-2 ml-3 row">
-            <div style="width: 45%;">
-                <div style="display: block">
-                    <canvas baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="barChartOptions" [legend]="'true'" [chartType]="'line'">
-  </canvas>
-                </div>
-            </div>
-            <div style="width: 45%;" class="ml-5">
-                <div style="display: block">
-                    <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [legend]="'true'" [chartType]="'bar'">
-            </canvas>
-                </div>
-            </div>
-        </div> -->
     </div>
     <div class="row">
         <div class="col-md-6">
@@ -73,7 +59,7 @@
                 </div>
                 <div class="card-footer">
                     <div class="stats">
-                        <i class="material-icons">access_time</i> Les Produits Le Plus Achetee
+                        <i class="material-icons">access_time</i> Les Produits Le Plus Achetée
                     </div>
                 </div>
             </div>
@@ -87,7 +73,7 @@
 
                 <div class="card-footer">
                     <div class="stats">
-                        <i class="material-icons">access_time</i> Revenue Dans Le Derniere Semaine
+                        <i class="material-icons">access_time</i> Revenue Dans Le Dernière Semaine
                     </div>
                 </div>
             </div>
