--- a/src/app/Components/Product/add-Product/add-product.component.html
+++ b/src/app/Components/Product/add-Product/add-product.component.html
@@ -2,19 +2,19 @@
     <div class="container contact-form">
         <form [formGroup]="form" (ngSubmit)="addProduct()">
             <h1 class="text-center display-1" style="margin-bottom: 2rem;">Ajouter Un Produit</h1>
-            <div *ngIf="isSbmitted" [ngClass]="{'alert alert-success':isAdedd,'alert alert-danger':!isAdedd}" role="alert ">
+            <div *ngIf="isSbmitted" class="alert" [ngClass]="{'alert-success':isAdedd,'alert-danger':!isAdedd}" role="alert">
                 {{ErrorMessage}}
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group ">
-                        <input type="text " name="name" class="form-control " placeholder="Nom " formControlName="name" />
+                        <input type="text " name="name" class="form-control " placeholder="Nom" formControlName="name" />
                         <small class="text-danger " *ngIf="form.get( 'name').errors?.required && form.get( 'name').touched ">Cette champ est obligatoire</small>
                         <small class="text-danger " *ngIf="form.get( 'name').invalid && form.get( 'name').touched && form.get( 'name').value!=='' ">Value est invalid</small>
                     </div>
                     <div class="row">
                         <div class="form-group col-md-6">
-                            <input type="text " name="price" class="form-control " placeholder="Prix " formControlName="price" />
+                            <input type="number" name="price" class="form-control" placeholder="Prix" formControlName="price" />
                             <small class="text-danger " *ngIf="form.get( 'price').errors?.required && form.get( 'price').touched ">Cette champ est obligatoire </small>
                             <small class="text-danger " *ngIf="form.get( 'price').invalid && form.get( 'price').touched && form.get( 'price').value!=='' ">Value est invalid</small>
                         </div>
@@ -26,7 +26,7 @@
                     </div>
                     <div class="row">
                         <div class="col" style="width: 88%;" style="padding-right: 0px;">
-                            <select name=" category " class="form-select form-select-md mb-3 " aria-label=".form-select-lg example " formControlName="category">
+                            <select name=" category" class="form-select form-select-md mb-3" aria-label=".form-select-lg example " formControlName="category">
                         <option *ngFor="let c of listCategory " [ngValue]="c.id ">{{c.name}}</option>
                       </select>
                         </div>
@@ -47,14 +47,13 @@
                 </div>
                 <div class="col-md-6 ">
                     <div class="form-group">
-                        <textarea name="description " class="form-control " rows="6" placeholder="Description " formControlName="description"></textarea>
+                        <textarea name="description " class="form-control " rows="6" placeholder="Description(optionnle) " formControlName="description"></textarea>
                     </div>
                 </div>
                 <div>
                     <input type="submit" [disabled]="!form.valid " class="btn btn-primary text-capitalize col-xs-6 " value="Ajouter " style="cursor: pointer; ">
                     <input type="reset" class="btn btn-default text-capitalize col-xs-6 " value="Vide " style="cursor: pointer; ">
                 </div>
-                <a routerLink="/home/products " class="link-info text-capitalize " style="color: rgb(172, 25, 173); margin-top: 1rem ">Revenir à la List</a>
             </div>
         </form>
     </div>
