--- a/src/app/Components/Product/edit-product/edit-product.component.html
+++ b/src/app/Components/Product/edit-product/edit-product.component.html
@@ -3,7 +3,7 @@
         <form [formGroup]="form" (ngSubmit)="updateProduct()">
             <h1 class="text-center">Modifier Un Produit</h1>
 
-            <div *ngIf="isSbmitted" [ngClass]="{'alert alert-success':isAdedd,'alert alert-danger':!isAdedd}" role="alert">
+            <div *ngIf="isSbmitted" class="alert" [ngClass]="{'alert-success':isAdedd,'alert-danger':!isAdedd}" role="alert">
                 {{ErrorMessage}}
             </div>
             <div class="row">
@@ -15,19 +15,19 @@
                     </div>
                     <div class="row">
                         <div class="form-group col-md-6">
-                            <input type="text " name="price" class="form-control " placeholder="Prix " formControlName="price" />
+                            <input type="text" name="price" class="form-control " placeholder="Prix " formControlName="price" />
                             <small class="text-danger " *ngIf="form.get( 'price').errors?.required && form.get( 'price').touched ">Cette champ est obligatoire </small>
                             <small class="text-danger " *ngIf="form.get( 'price').invalid && form.get( 'price').touched && form.get( 'price').value!=='' ">Value est invalid</small>
                         </div>
                         <div class="form-group col-md-6">
-                            <input type="number" name="quantityStock " class="form-control " placeholder="Qunatite en stock" formControlName="quantityStock" />
+                            <input type="number" name="quantityStock" class="form-control " placeholder="Qunatite en stock" formControlName="quantityStock" />
                             <small class="text-danger " *ngIf="form.get( 'quantityStock').errors?.required && form.get( 'quantityStock').touched ">Cette champ est obligatoire</small>
                             <small class="text-danger " *ngIf="form.get( 'quantityStock').invalid && form.get( 'quantityStock').touched && form.get( 'quantityStock').value!=='' ">Value est invalid</small>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <select name=" category " class="form-select form-select-md" aria-label=".form-select-lg example " formControlName="category">
+                            <select name="category" class="form-select form-select-md" aria-label=".form-select-lg example" formControlName="category">
                         <option *ngFor="let c of listCategory " [ngValue]="c.id ">{{c.name}}</option>
                       </select>
                         </div>
