--- a/src/app/Components/Supplier/add-Supplier/add-supplier/add-supplier.component.html
+++ b/src/app/Components/Supplier/add-Supplier/add-supplier/add-supplier.component.html
@@ -4,7 +4,7 @@
         <div *ngIf="isAdedd" [ngClass]="{'alert alert-success':isAdedd,'alert alert-danger':!isAdedd}" role="alert ">
             {{ErrorMessage}}
         </div>
-        <div *ngIf="errorMessage.length!=0" class="alert alert-danger" role="alert">
+        <div *ngIf="errorMessage.length!=0" [ngClass]="{'alert alert-success':isAdedd,'alert alert-danger':!isAdedd}" role="alert">
             {{errorMessage}}
         </div>
         <form class="contact-form" [formGroup]="form" (ngSubmit)="addsupplier()">
