--- a/src/app/Components/order/detail-order/detail-order.component.html
+++ b/src/app/Components/order/detail-order/detail-order.component.html
@@ -17,7 +17,6 @@
                 <div class="col-md-3 ">
                     <span class="mr-3 strong">Créé le :</span> <span> {{ data?.orderDate | date:'dd-MM-yyyy'}} </span>
 
-                    <!-- <button class="btn" (click)="imprimer()">Imprimer</button>     -->
                     <div class="imprimer btn-primary" (click)="imprimer()">
                         <i class=" fa fa-print fa-lg"></i>
 
@@ -25,21 +24,14 @@
                 </div>
             </div>
         </div>
-
-
-
     </div>
     <div class="d-flex justify-content-center row">
         <h3 class="ml-5 my-3">Détail</h3>
-        <!-- <div class="col-md-10" *ngIf="data.orderProducts?.length>0"> 
-        </div> -->
-
-
         <div class="row">
             <div class="col-md-12">
                 <div class="table-wrap">
-                    <table class="table">
-                        <thead class="thead-primary" style="background-color: rgb(173, 5, 173);">
+                    <table class="table table-responsive-sm">
+                        <thead class="thead-primary">
                             <tr>
                                 <th>&nbsp;</th>
                                 <th>Produit</th>
@@ -52,7 +44,6 @@
                         <tbody>
                             <tr *ngFor="let item of data?.orderProducts" class="alert" role="alert">
                                 <td>
-                                    <!-- <img class="img" [src]="product.image" [alt]="product.name"> -->
                                 </td>
 
                                 <td class="border-bottom-0">
@@ -65,32 +56,22 @@
                                 <td class="border-bottom-0">{{item.prixHt | number:'.1-3'}} Dhs</td>
                                 <td class="border-bottom-0">{{item.quantity}}</td>
                                 <td class="border-bottom-0">{{item.totalHT}}</td>
-
-
                             </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
-
-
-
         </div>
 
-        <div class="row">
-            <div class="col-md-6"></div>
-            <div class="col-md-6 totals text-right">
-                <div class="row  ">
-                    <div class="col-md-3">
-                        <h4 class="strong">Total HT</h4>
-                        <h4 class="strong">Total TTC</h4>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>{{ data?.totalht }} DH</h4>
-                        <h4>{{ data?.total }} DH</h4>
-                    </div>
-                </div>
+        <div class="row text-right">
+            <div class="col-ms-6">
+                <span class="strong mr-2">Total HT :</span>
+                <span>{{ data?.totalht }} DH</span>
+
+            </div>
+            <div class="col-ms-6">
+                <span class="strong mr-2">Total TTC :</span>
+                <span>{{ data?.total }} DH</span>
             </div>
         </div>
     </div>
-</div>
