--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -70,7 +70,7 @@
         <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
             <div class="container-fluid">
                 <div class="navbar-wrapper">
-                    <a class="navbar-brand">{{currentEmployee.name}}</a>
+                    <a class="navbar-brand ml-5"><i style="border: 3px solid rgb(173, 5, 173);color:rgb(173, 5, 173) ; border-radius: 40%;padding: 0.3rem  0.5rem;margin-right: 0.5rem;" class="fa fa-user"></i>{{currentEmployee.name}} ({{currentEmployee.role|uppercase}})</a>
                 </div>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="true" aria-label="Toggle navigation">
